--- a/index.html
+++ b/index.html
@@ -1,22 +1,35 @@
 <html>
   <head>
     <title>Map Spreading Growth</title>
-     <link rel="stylesheet" type="text/css" href="mystyle.css">
+     <link rel="stylesheet" type="text/css" href="stylesheets/reset.css">
+     <link rel="stylesheet" type="text/css" href="stylesheets/layout.css">
+     <link rel="stylesheet" type="text/css" href="stylesheets/styles.css">
   </head>
   <body>
     <div class="wrapper">
       <div class="container">
         <header>
+          <h1>Map Spreading Growth</h1>
         </header>
 
         <div class="content">
 
           <div class="map-content">
-          </div>
 
+          </div>
+          <div class="map-options">
+            <ul class="">
+              <li><a href="#">Seller Population</a></li>
+              <li><a href="#">Buyer Population</a></li>
+              <li><a href="#">Transactions</a></li>
+            </ul>
+          </div>
         </div>
 
         <footer>
+          <div class="copy">
+            &copy; 2017 by 4G Team
+          </div>
         </footer>
       </div>
       <script type="text/javascript" src="jquery-3.2.1.min.js"></script>
