--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
           </div>
         </footer>
       </div>
-      <script type="text/javascript" src="jquery-3.2.1.min.js"></script>
+      <script type="text/javascript" src="javascripts/jquery-3.2.1.min.js"></script>
+      <script type="text/javascript" src="javascripts/map.js">
+
+      </script>
     </div>
   </body>
 </html>
