--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <html>
   <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <title>Map Spreading Growth</title>
-     <link rel="stylesheet" type="text/css" href="stylesheets/reset.css">
-     <link rel="stylesheet" type="text/css" href="stylesheets/layout.css">
-     <link rel="stylesheet" type="text/css" href="stylesheets/styles.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/reset.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/layout.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/map.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/styles.css">
   </head>
   <body>
     <div class="wrapper">
@@ -15,7 +18,28 @@
         <div class="content">
 
           <div class="map-content">
-
+            <div id="controls" class="nicebox">
+              <div>
+              <select id="census-variable">
+                <option value="https://storage.googleapis.com/mapsdevsite/json/DP02_0066PE">Percent of population over 25 that completed high
+                school</option>
+                <option value="https://storage.googleapis.com/mapsdevsite/json/DP05_0017E">Median age</option>
+                <option value="https://storage.googleapis.com/mapsdevsite/json/DP05_0001E">Total population</option>
+                <option value="https://storage.googleapis.com/mapsdevsite/json/DP02_0016E">Average family size</option>
+                <option value="https://storage.googleapis.com/mapsdevsite/json/DP03_0088E">Per-capita income</option>
+              </select>
+              </div>
+              <div id="legend">
+                <div id="census-min">min</div>
+                <div class="color-key"><span id="data-caret">&#x25c6;</span></div>
+                <div id="census-max">max</div>
+              </div>
+            </div>
+            <div id="data-box" class="nicebox">
+              <label id="data-label" for="data-value"></label>
+              <span id="data-value"></span>
+            </div>
+            <div id="map"></div>
           </div>
           <div class="map-options">
             <ul class="">
@@ -32,7 +56,10 @@
           </div>
         </footer>
       </div>
-      <script type="text/javascript" src="jquery-3.2.1.min.js"></script>
+      <script type="text/javascript" src="javascripts/jquery-3.2.1.min.js"></script>
+      <script type="text/javascript" src="javascripts/map.js"></script>
+      <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDZ1K9TaK2vhGRWu4p-OWmxLin7uKt7LNI&callback=initMap">
+    </script>
     </div>
   </body>
 </html>
