--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
         </footer>
       </div>
       <script type="text/javascript" src="javascripts/jquery-3.2.1.min.js"></script>
+      <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDZ1K9TaK2vhGRWu4p-OWmxLin7uKt7LNI&callback=initMap"></script>
       <script type="text/javascript" src="javascripts/map.js"></script>
-      <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDZ1K9TaK2vhGRWu4p-OWmxLin7uKt7LNI&callback=initMap">
+
     </script>
 
     </div>
