--- a/index.html
+++ b/index.html
@@ -1,67 +1,75 @@
+<!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
-    <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
-    <title>Map Spreading Growth</title>
-    <link rel="stylesheet" type="text/css" href="stylesheets/reset.css">
-    <link rel="stylesheet" type="text/css" href="stylesheets/layout.css">
-    <link rel="stylesheet" type="text/css" href="stylesheets/map.css">
-    <link rel="stylesheet" type="text/css" href="stylesheets/styles.css">
+    <title>Circles</title>
+    <style>
+      /* Always set the map height explicitly to define the size of the div
+       * element that contains the map. */
+      #map {
+        height: 100%;
+      }
+      /* Optional: Makes the sample page fill the window. */
+      html, body {
+        height: 70%;
+        margin: 0;
+        padding: 0;
+      }
+    </style>
   </head>
   <body>
-    <div class="wrapper">
-      <div class="container">
-        <header>
-          <h1>Map Spreading Growth</h1>
-        </header>
+    <div id="map"></div>
+    <script>
+      // This example creates circles on the map, representing populations in North
+      // America.
 
-        <div class="content">
+      // First, create an object containing LatLng and population for each city.
 
-          <div class="map-content">
-            <div id="controls" class="nicebox">
-              <div>
-              <select id="census-variable">
-                <option value="https://storage.googleapis.com/mapsdevsite/json/DP02_0066PE">Percent of population over 25 that completed high
-                school</option>
-                <option value="https://storage.googleapis.com/mapsdevsite/json/DP05_0017E">Median age</option>
-                <option value="https://storage.googleapis.com/mapsdevsite/json/DP05_0001E">Total population</option>
-                <option value="https://storage.googleapis.com/mapsdevsite/json/DP02_0016E">Average family size</option>
-                <option value="https://storage.googleapis.com/mapsdevsite/json/DP03_0088E">Per-capita income</option>
-              </select>
-              </div>
-              <div id="legend">
-                <div id="census-min">min</div>
-                <div class="color-key"><span id="data-caret">&#x25c6;</span></div>
-                <div id="census-max">max</div>
-              </div>
-            </div>
-            <div id="data-box" class="nicebox">
-              <label id="data-label" for="data-value"></label>
-              <span id="data-value"></span>
-            </div>
-            <div id="map"></div>
-          </div>
-          <div class="map-options">
-            <ul class="">
-              <li><a href="#">Seller Population</a></li>
-              <li><a href="#">Buyer Population</a></li>
-              <li><a href="#">Transactions</a></li>
-            </ul>
-          </div>
-        </div>
+      function initMap() {
+        // Create the map.
+        var map = new google.maps.Map(document.getElementById('map'), {
+          zoom: 7,
+          center: {lat: -7.614529, lng: 110.712246},
+          mapTypeId: 'terrain'
+        });
 
-        <footer>
-          <div class="copy">
-            &copy; 2017 by 4G Team
-          </div>
-        </footer>
-      </div>
-      <script type="text/javascript" src="javascripts/jquery-3.2.1.min.js"></script>
-      <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDZ1K9TaK2vhGRWu4p-OWmxLin7uKt7LNI&callback=initMap"></script>
-      <script type="text/javascript" src="javascripts/map.js"></script>
-
+        // Construct the circle for each value in citymap.
+        // Note: We scale the area of the circle based on the population.
+        for (var city in citymap) {
+          // Add the circle for this city to the map.
+          if(Math.sqrt(citymap[city].population) < 200)
+          {
+            var cityCircle = new google.maps.Circle({
+              strokeColor: '#000000',
+              strokeOpacity: 0.8,
+              strokeWeight: 2,
+              fillColor: '#000000',
+              fillOpacity: 0.35,
+              map: map,
+              center: citymap[city].center,
+              radius: Math.sqrt(citymap[city].population)*5
+            });
+          }
+          else
+          {
+            var cityCircle = new google.maps.Circle({
+              strokeColor: '#FF0000',
+              strokeOpacity: 0.8,
+              strokeWeight: 2,
+              fillColor: '#FF0000',
+              fillOpacity: 0.35,
+              map: map,
+              center: citymap[city].center,
+              radius: Math.sqrt(citymap[city].population)*5
+            });
+          }
+        }
+      }
     </script>
-
-    </div>
+    <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDZ1K9TaK2vhGRWu4p-OWmxLin7uKt7LNI&callback=initMap">
+    </script>
+    <script type="text/javascript" src="january.js"></script>
   </body>
 </html>
