--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <select class="form-control inline-items data-showing">
               <option value="user">User Population</option>
               <option value="buyer">Buyer Population</option>
-              <option value="seller">Buyer Population</option>
+              <option value="seller">Seller Population</option>
               <option value="transactions">Jumlah Transaksi</option>
             </select>
           </div>
