fixing layout, radius and scale marker

--- a/index.html
+++ b/index.html
@@ -14,10 +14,14 @@
 <body>
   <div class="wrapper">
     <header>
+      <div class="right">
+        <p class="user-greeting">Hi, 4G (Go Growth GMV Go)!</p>
+      </div>
       <h1 class="title">Bukalapak Spreading Growth Map</h1>
       <div class="clear"></div>
     </header>
     <div class="container">
+      <h2 class="page-title space-bottom-10">User Population</h2>
       <div class="content">
         <div class="map-filters">
           <div class="right">
